Fix link spacing

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,23 +1,11 @@
-// @import 'variables';
+@import 'variables';
 
 * {
     box-sizing: border-box;
     font-size: 1rem;
     font-style: normal;
     font-weight: normal;
-//     font-family: 'Open Sans', sans-serif;
 }
-
-// body {
-// 	padding-top: 3rem;
-// 	margin: 0 auto;
-// 	max-width: $max-width;
-// }
-// .active {
-// 	font-weight: 800;
-// 	text-decoration: underline;
-// }
-
 
 html, body {
     height: 100vh;
@@ -31,31 +19,40 @@ html, body {
     justify-content: center;
     position: relative;
 }
+
 .mock {
     text-align: center;
 }
+
 .links {
     display: grid;
     grid-auto-flow: row;
-    grid: 8rem auto / 1fr auto 1fr;
+    grid: 8rem auto / 1fr 1fr 1fr 1fr;
     max-width: 80%;
     margin: 0 auto;
 }
+
+a {
+    text-decoration: none;
+}
+
 .links > a {
-    color: #282828;
+    color: $black;
     font-size: 2.2rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-decoration: none;
 }
+
 .links > a > img {
     width: 2rem;
 }
+
 .logo {
     margin-bottom: 30px;
     width: 6rem;
 }
+
 .hi {
     font-family: 'Bitter', serif;
     font-size: 1rem;
